Header: Fix missing border between Iniciar Sesión and Registrarse

--- a/tickets/static/css/barbu-style.css
+++ b/tickets/static/css/barbu-style.css
@@ -78,12 +78,12 @@ footer {
   color: #fff;
 }
 
-.nav-item:first-child:before {
+.nav-item:not(.no-border):not(:first-child):before {
   content: "|";
   color: #fff;
   position: absolute;
   top: 50%;
-  right: -2px;
+  left: -2px;
   transform: translateY(-50%);
 }
 
